# WSCupdates

./: CMakeLists.txt
GorelickModel/: .RData  .Rhistory  CMakeLists.txt  InsuranceFund.cpp  Makefile  RDMSamples.csv  ReservoirStorage.cpp  ReservoirStorage.h  Simulation.cpp  Simulation.h  TimeSeriesData.cpp  WaterUtility.cpp  WaterUtility.h  borgProblemDefinition.h  global.h  lhs_samples_final.csv  plot_inflows_demands.py  submitCBorgRuns.sh  submitCBorgRuns.sh.o278536  submitCBorgRuns.sh.o278598  submitCBorgRuns.sh.o278614  testParallel.sh  triangleSimulation.cpp  utility.cpp
GorelickModel/Ranalysis/: MSplotting05232017.R  MSplotting05252017.R
GorelickModel/demand_files/: CBorg_NCTriangle_O0_F2_S1.set  lhs_samples_final.csv
GorelickModel/inputfiles/: RDMSamples.csv  lhs_samples_final.csv  paramterInputFile.csv
GorelickModel/inputfiles/historicfakesyntheticflows/: updatedDurhamInflowSYN.csv
GorelickModel/inputfiles/oldParamInputFile/: parameterInputFile2.csv
GorelickModel/output/: .RData  .Rhistory  ALLtransferData0_0_0.csv  Dbuyback0.csv  Dbuyback2.csv  Dbuyback3.csv  Dcrit0.csv  Dcrit1.csv  Dcrit2.csv  Dcrit3.csv  InfraBuilt0_0.csv  InfraBuilt0_1_0.csv  JLTTD0.csv  JLTTD1.csv  JLTTD2.csv  JLTTD3.csv  JLTTR0.csv  JLTTR1.csv  JLTTR2.csv  JLTTR3.csv  JLTreatedTransfers0_0_0.csv  JLtransfersDurhamNR.csv  JLtransfersDurhamR.csv  JLtransfersDurhamReleaseAllowed.csv  JLtransfersRaleighNR.csv  JLtransfersRaleighR.csv  JLtransfersRaleighReleaseAllowed.csv  LMrealloc0_0.csv  LMrealloc0_0_0.csv  LMrealloc0_1_0.csv  RRfuncOutput0_0_0.csv  RRfuncOutput0_1_0.csv  Rcrit0.csv  Rcrit1.csv  Rcrit3.csv  RestrictionData0_0_0.csv  RestrictionData0_1_0.csv  calcRawReleasesFunctionData.csv  calcRawReleasesFunctionDataNR.csv  calcRawReleasesFunctionDataR.csv  (+41 more)
